--- a/peticiones/index.html
+++ b/peticiones/index.html
@@ -9,9 +9,11 @@
 <header>
     <h1> haciendo peticiones asincoronas con JS y post</h1>
     <ul class="menu">
+        <li class="menu-item"><a href="/index.php">Home</a></li>
         <li class="menu-item"><a href="/javascript.php">Javascript con php</a></li>
         <li class="menu-item"><a href="/buenas-practicas.php">Buenas Practicas</a></li>
         <li class="menu-item"><a href="/peticiones/index.html">Peticiones</a></li>
+        <li class="menu-item"><a href="/forms-get/form-get.php">form-get</a></li>
     </ul>
 </header>
 <body>
