--- a/peticiones/index.html
+++ b/peticiones/index.html
@@ -14,6 +14,10 @@
         <li class="menu-item"><a href="/buenas-practicas.php">Buenas Practicas</a></li>
         <li class="menu-item"><a href="/peticiones/index.html">Peticiones</a></li>
         <li class="menu-item"><a href="/forms-get/form-get.php">form-get</a></li>
+        <li class="menu-item"><a href="/forms-post/form-post.php">form-post</a></li>
+        <li class="menu-item"><a href="/files/files.php">files</a></li>
+        <li class="menu-item"><a href="/validacionphp/validacion.php">validacion php</a></li>
+        <li class="menu-item"><a href="/Sanitizando/formulario.php">Sanitazand</a></li>
     </ul>
 </header>
 <body>
